@@ -1,3 +1,9 @@
+2002-02-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* mac/tclMacSock.c (TcpGetOptionProc): Changed to recognize the
+	  option "-error". Essentially ignores the option, always
+	  returning an empty string.
+
 2002-02-25  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/tclWinNotify.c (Tcl_FinalizeNotifier): backported fix for
